# Software_Security

Lab1/: system_fingerprint.sh  system_info.sh
Lab10/: Rafayel_Lab10_lracucich.docx  allExamples.cpp
Lab13/: Firewall.cpp  lracucich.cpp
Lab2/: simple_RLE.cpp
Lab3/include/: LicenseKey.h  LicenseManager.h
Lab3/src/: LicenseKey.cpp  LicenseManager.cpp  main.cpp
Lab5/: CMakeLists.txt
Lab5/include/: cipher.h  file_operations.h  usb_detector.h  utils.h
Lab5/src/: cipher.cpp  file_operations.cpp  main.cpp  usb_detector.cpp  utils.cpp
Lab_11-12/: Combination.cpp  ControlFlowFlattening.cpp  PolymorphicEngine.cpp  VMBasedObf.cpp
